# ChangeLog for kde-base/kdesdk-kioslaves
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.138 2010/02/25 12:46:53 ssuominen Exp $

  25 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  kdesdk-kioslaves-4.3.5.ebuild, kdesdk-kioslaves-4.4.0.ebuild:
  Fix kdesvn blockers wrt #306467, thanks to Andreas K. Huettel for
  reporting.

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  kdesdk-kioslaves-4.3.5.ebuild:
  amd64/x86 stable wrt #300393

*kdesdk-kioslaves-4.4.0 (08 Feb 2010)

  08 Feb 2010; Alexey Shvetsov <alexxy@gentoo.org>
  +kdesdk-kioslaves-4.4.0.ebuild:
  Version bump to KDE SC 4.4.0

*kdesdk-kioslaves-4.3.5 (25 Jan 2010)

  25 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +kdesdk-kioslaves-4.3.5.ebuild:
  Version bump

  23 Jan 2010; Jonathan Callen <abcd@gentoo.org>
  kdesdk-kioslaves-4.3.4.ebuild:
  Keyword ~amd64-linux/~x86-linux

  23 Dec 2009; Jonathan Callen <abcd@gentoo.org>
  kdesdk-kioslaves-4.3.4.ebuild:
  Pull in changes from overlay and prefix support

  10 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdesdk-kioslaves-4.3.1.ebuild:
  Drop KDE SC-4.3.1.

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  kdesdk-kioslaves-4.3.3.ebuild:
  x86 stable, bug 292455

*kdesdk-kioslaves-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org>
  +kdesdk-kioslaves-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  kdesdk-kioslaves-4.3.3.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdesdk-kioslaves-4.3.3.ebuild:
  amd64 stable wrt #292455

  19 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  -kdesdk-kioslaves-3.5.10.ebuild:
  Remove KDE 3.5.10.

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdesdk-kioslaves-4.3.2.ebuild:
  Drop KDE 4.3.2

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -kdesdk-kioslaves-4.2.4.ebuild: