@@ -4,7 +4,7 @@ DIST kdesdk-4.3.5.tar.bz2 5617746 RMD160 365c1f4c307acc4c17443969d4ac153c047d5fa
 DIST kdesdk-4.4.0.tar.bz2 5657229 RMD160 815e1c8c24fd95eec698b72546164c44294b210f SHA1 eb7ee7af3c6e62bd2e6d4a6be0afd346c050d963 SHA256 0e52fb897a6919db1d24ffb74d6a9b0264b1360606fc09775a7bdf235d5e919f
 EBUILD kdesdk-kioslaves-4.3.3.ebuild 625 RMD160 22547fabd306c869b275086199b5a650e1f79768 SHA1 1de4f7619bb7042df51012b434a1f204df5a5dfe SHA256 9d306e9a4f5b418f04752eb94c5fac151dfe0356b251ad42356a8fae9455ddd4
 EBUILD kdesdk-kioslaves-4.3.4.ebuild 652 RMD160 ffc117263734be267c432c3bcd75a1469df411bb SHA1 6f41b5f83aee58431a71d7b9b0607c777bab9a54 SHA256 778a440a3fa300dd33a074f4dfb68f7c841bf505e9cf7bddb262e9ae5d6d2661
-EBUILD kdesdk-kioslaves-4.3.5.ebuild 765 RMD160 1437833fa483281e9b3c8025d2a9d58a37c03833 SHA1 19b03b3417afbd49f78413d9197374924b5a0fb2 SHA256 e98670558d12d138f1aba39110d2305d428e2cc7ca87bb2ede69a7c8befff9c3
-EBUILD kdesdk-kioslaves-4.4.0.ebuild 767 RMD160 bf0e97bc5bf82f6a863f726867bf79efd8b82438 SHA1 75ce8088babbd54e71a6d87a7e5b8bc679543a80 SHA256 f8393349826e9512a7be154618d596f482d737f41ed0017773127b39e49011c3
-MISC ChangeLog 18992 RMD160 fb135446b89588c4b8dea88db9cf7d279f62cfce SHA1 b9c1cae12c3e7bebac061efa242ded09e5956633 SHA256 9387b23df23a4e80de9064a7e3327e1e9d956a18c3bc88a25cc055db253f6742
+EBUILD kdesdk-kioslaves-4.3.5.ebuild 765 RMD160 3705b7207e7fcd05f24f8f081ae768630ce44a2d SHA1 8acbad1a0d3a1025d67068349ed7a13fab308f66 SHA256 ce3528f1a94161457dcb1f4219ee21d63f0d9c0b7d6fa3f1790b7b5ed40ed74c
+EBUILD kdesdk-kioslaves-4.4.0.ebuild 767 RMD160 9d81b971292762a7fb8eb29ed316639971f53194 SHA1 a1465e302e8ee64e5bd1518db6fb7bcfaf7a9dc5 SHA256 ec1a0bcc3924fb73b113a7d0ee786a38f855e4699be970858347648828ce34d4
+MISC ChangeLog 19180 RMD160 e4d918ca1b090dd2a28bbde3c7bee26b18e44438 SHA1 582b0e9883e48869f7728044e6e178558ac73250 SHA256 70c17b8e84cb2c59d5bb5d10162cd5a205f6f7f340306acfaf31f56b6f048e03
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
