@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesdk-kioslaves
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.138 2010/02/25 12:46:53 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.139 2010/02/25 13:57:17 reavertm Exp $
+
+  25 Feb 2010; Maciej Mrozowski <reavertm@gentoo.org>
+  kdesdk-kioslaves-4.3.5.ebuild, kdesdk-kioslaves-4.4.0.ebuild:
+  Fixed block - our kdesvn provides service menus starting with 1.5.2
 
   25 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
   kdesdk-kioslaves-4.3.5.ebuild, kdesdk-kioslaves-4.4.0.ebuild:
